# lmgist

./: .gitignore  AGENTS.md  LICENSE  README.md  RUNBOOK.md  pyproject.toml
configs/: base.yaml  cross-domain-eval.yaml  embed-minilm.yaml  embed-qwen3.yaml  k1.yaml  k16.yaml  k2.yaml  k32.yaml  k4.yaml  k8.yaml  linear.yaml  lora-frozen.yaml  lora-unfrozen.yaml  (+10 more)
small-agent/: pyproject.toml
small-agent/configs/: train.yaml
small-agent/results/: baseline.jsonl
small-agent/scripts/: clone_repos.sh  gen_data.py  run_eval.py  train.py
small-agent/src/agent/: data.py  docker.py  eval.py  harness.py  tasks.py  tools.py  train.py
small-agent/tasks/: base.Dockerfile  task_add_docstring.json  task_add_return.json  task_find_and_fix.json  task_fix_import.json  task_fix_indent.json  task_fix_test.json  task_fix_two_files.json  task_fix_typo.json  task_js_fix_return.json  task_js_fix_typo.json  task_js_rename.json  task_rename_var.json  task_rust_fix_typo.json  task_rust_mut.json  task_string_literal.json
small-agent/tasks/task_add_docstring/: utils.py
small-agent/tasks/task_add_return/: utils.py
small-agent/tasks/task_find_and_fix/: server.py
small-agent/tasks/task_fix_import/: app.py
small-agent/tasks/task_fix_indent/: calc.py
small-agent/tasks/task_fix_test/: math_utils.py  test_math.py
small-agent/tasks/task_fix_two_files/: app.py  config.py
small-agent/tasks/task_fix_typo/: app.py
small-agent/tasks/task_js_fix_return/: utils.js
small-agent/tasks/task_js_fix_typo/: index.js
small-agent/tasks/task_js_rename/: app.js
small-agent/tasks/task_rename_var/: main.py
small-agent/tasks/task_rust_fix_typo/: main.rs
small-agent/tasks/task_rust_mut/: main.rs
small-agent/tasks/task_string_literal/: greet.py
(+50 files in other folders)
